--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,3 +121,8 @@ body {
 fieldset{
 	background-color:lightsalmon;
 }
+
+.new{
+	background-color:#27566B;
+	color:white;
+}
